      this (Closes: #614439).
  * debian/patches:
    - Removed bts595756-notify_email-segfault -- included upstream.
    - Removed bts592623-curl_json-file -- included upstream.
    - Removed bts596128-reheap-fix -- included upstream.
    - Removed CVE-2010-4336 -- included upstream.
  * debian/rules:
    - Append DEB_BUILD_ARCH to JAVA_HOME; this is how it's done in the OpenJDK
      package.
  * debian/patches/ipvs_h_include, debian/rules:
    - Let the ipvs plugin use linux/ip_vs.h rather than net/ip_vs.h. Also,
      make sure to look for the header in /usr/include rather than the kernel
      directory (which has been deprecated).
    - Force building of the ipvs plugin since configure is not currently able
      to correctly check for ip_vs.h.

 -- Sebastian Harl <tokkee@debian.org>  Mon, 09 Jan 2012 14:35:27 +0100

collectd (4.10.1-2.1) unstable; urgency=high

  * Non-maintainer upload by the security team
  * Fix DoS in RRD file creation (Closes: #605092)
    Fixes: CVE-2010-4336
    Thanks to Florian Forster

 -- Steffen Joeris <white@debian.org>  Wed, 08 Dec 2010 17:45:50 +1100

collectd (4.10.1-2) unstable; urgency=medium

  * debian/rules:
    - Added support for ‘powerpcspe’ to the Java arch mapping; thanks to
      Sebastian Andrzej Siewior for the patch (Closes: #592909).
  * debian/patches:
    - Added bts595756-notify_email-segfault -- upstream patch fixing a
      segfault in the 'notify_email' plugin; thanks to Manuel CISSE for
      reporting this (Closes: #595756).
    - Added bts592623-curl_json-file -- upstream patch fixing access to
      file:// URLs in the 'curl_json' plugin; thanks Baptiste Mille-Mathias
      for reporting this and pointing out the patch (Closes: #592623).
    - Added bts596128-reheap-fix -- upstream patch fixing the 'reheap()'
      function used to manage the "read" callbacks and making sure all plugins
      get executed correctly and in each interval (Closes: #596128).